--- a/lib/generators/provider/global/templates/global_migration.rb.tt
+++ b/lib/generators/provider/global/templates/global_migration.rb.tt
@@ -1,4 +1,4 @@
-class Create<%= class_name %>TablesAndAccounts < ActiveRecord::Migration<%= migration_version %>
+class Create<%= class_name %>ItemsAndAccounts < ActiveRecord::Migration<%= migration_version %>
   def change
     # Create provider items table (stores per-family connections)
     # NOTE: Credentials are stored GLOBALLY in the 'settings' table via Provider::Configurable
@@ -31,7 +31,6 @@ class Create<%= class_name %>TablesAndAccounts < ActiveRecord::Migration<%= migr
       t.timestamps
     end
 
-    add_index :<%= table_name %>, :family_id
     add_index :<%= table_name %>, :status
 
     # Create provider accounts table (stores individual account data from provider)
@@ -58,6 +57,5 @@ class Create<%= class_name %>TablesAndAccounts < ActiveRecord::Migration<%= migr
     end
 
     add_index :<%= file_name %>_accounts, :account_id
-    add_index :<%= file_name %>_accounts, :<%= file_name %>_item_id
   end
 end
