Implement a provider configured account type

--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,6 +1,6 @@
 <%= render layout: "accounts/new/container", locals: { title: t(".title") } do %>
   <div class="text-sm"
-       <% if @show_lunchflow_link %>
+       <% if @provider_configs.any? { |c| c[:key] == "lunchflow" } %>
          data-controller="lunchflow-preload"
        <% end %>>
     <% unless params[:classification] == "liability" %>
