--- a/app/views/depositories/new.html.erb
+++ b/app/views/depositories/new.html.erb
@@ -1,9 +1,7 @@
 <% if params[:step] == "method_select" %>
   <%= render "accounts/new/method_selector",
              path: new_depository_path(return_to: params[:return_to]),
-             show_us_link: @show_us_link,
-             show_eu_link: @show_eu_link,
-             show_lunchflow_link: @show_lunchflow_link,
+             provider_configs: @provider_configs,
              accountable_type: "Depository" %>
 <% else %>
   <%= render DS::Dialog.new do |dialog| %>
